# JK_OPENGL

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: jk_arcball.cpp  jk_arcball.h  jk_scene.h
src/fire/: README  main.cpp  scenefire.cpp  sceneparticles.h  scenesmoke.cpp  scenewave.cpp
src/fire/shader/: fire.fs  fire.vs
src/ingredients/: CMakeLists.txt
src/particle01/: main.cpp  particle.cpp  particle.h
src/temp/: main.cpp  sceneflat.cpp
src/temp/shader/: flat.frag  flat.vert
src/wave/: CMakeLists.txt  Ocean.cpp  RenderObject.cpp  Terrain.cpp  gerstner.cpp  gerstner.h  main.cpp
